"""Add message flagging and user suspension fields

Revision ID: e8db8c5ff61e
Revises: 
Create Date: 2025-11-08 23:28:27.662507

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = 'e8db8c5ff61e'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    # Drop reviews table only if it exists
    from sqlalchemy import inspect
    conn = op.get_bind()
    inspector = inspect(conn)
    if 'reviews' in inspector.get_table_names():
        op.drop_table('reviews')
    with op.batch_alter_table('bookings', schema=None) as batch_op:
        # Add columns as nullable first
        batch_op.add_column(sa.Column('start_date', sa.DateTime(), nullable=True))
        batch_op.add_column(sa.Column('end_date', sa.DateTime(), nullable=True))
        batch_op.add_column(sa.Column('updated_at', sa.DateTime(), nullable=True))
        batch_op.drop_column('end_time')
        batch_op.drop_column('start_time')
    
    # Set default values for existing records (use created_at as fallback)
    # This must be done outside the batch_alter_table context
    op.execute("UPDATE bookings SET start_date = created_at WHERE start_date IS NULL")
    op.execute("UPDATE bookings SET end_date = datetime(created_at, '+1 hour') WHERE end_date IS NULL")
    
    # Now make them NOT NULL
    with op.batch_alter_table('bookings', schema=None) as batch_op:
        batch_op.alter_column('start_date', nullable=False)
        batch_op.alter_column('end_date', nullable=False)

    with op.batch_alter_table('messages', schema=None) as batch_op:
        # Add columns as nullable first
        batch_op.add_column(sa.Column('is_read', sa.Boolean(), nullable=True))
        batch_op.add_column(sa.Column('is_flagged', sa.Boolean(), nullable=True))
        batch_op.add_column(sa.Column('is_hidden', sa.Boolean(), nullable=True))
        batch_op.add_column(sa.Column('flag_reason', sa.Text(), nullable=True))
    
    # Set default values for existing records
    op.execute("UPDATE messages SET is_read = 0 WHERE is_read IS NULL")
    op.execute("UPDATE messages SET is_flagged = 0 WHERE is_flagged IS NULL")
    op.execute("UPDATE messages SET is_hidden = 0 WHERE is_hidden IS NULL")
    
    # Now make them NOT NULL
    with op.batch_alter_table('messages', schema=None) as batch_op:
        batch_op.alter_column('is_read', nullable=False)
        batch_op.alter_column('is_flagged', nullable=False)
        batch_op.alter_column('is_hidden', nullable=False)
        batch_op.alter_column('subject',
               existing_type=sa.VARCHAR(length=200),
               nullable=False)
        batch_op.alter_column('created_at',
               existing_type=sa.DATETIME(),
               nullable=False)
        batch_op.drop_column('read')

    with op.batch_alter_table('resources', schema=None) as batch_op:
        # Add category as nullable first
        batch_op.add_column(sa.Column('category', sa.String(length=50), nullable=True))
        batch_op.add_column(sa.Column('image_url', sa.String(length=255), nullable=True))
        batch_op.add_column(sa.Column('is_available', sa.Boolean(), nullable=True))
        batch_op.add_column(sa.Column('is_featured', sa.Boolean(), nullable=True))
        batch_op.add_column(sa.Column('updated_at', sa.DateTime(), nullable=True))
        batch_op.drop_column('status')
        batch_op.drop_column('type')
    
    # Set default category for existing records
    op.execute("UPDATE resources SET category = 'General' WHERE category IS NULL")
    
    # Now make category NOT NULL
    with op.batch_alter_table('resources', schema=None) as batch_op:
        batch_op.alter_column('category', nullable=False)

    with op.batch_alter_table('users', schema=None) as batch_op:
        # Add column as nullable first
        batch_op.add_column(sa.Column('is_suspended', sa.Boolean(), nullable=True))
        batch_op.add_column(sa.Column('suspension_reason', sa.Text(), nullable=True))
    
    # Set default values for existing records
    op.execute("UPDATE users SET is_suspended = 0 WHERE is_suspended IS NULL")
    
    # Now make it NOT NULL
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.alter_column('is_suspended', nullable=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.drop_column('suspension_reason')
        batch_op.drop_column('is_suspended')

    with op.batch_alter_table('resources', schema=None) as batch_op:
        batch_op.add_column(sa.Column('type', sa.VARCHAR(length=50), nullable=False))
        batch_op.add_column(sa.Column('status', sa.VARCHAR(length=20), nullable=True))
        batch_op.drop_column('updated_at')
        batch_op.drop_column('is_featured')
        batch_op.drop_column('is_available')
        batch_op.drop_column('image_url')
        batch_op.drop_column('category')

    with op.batch_alter_table('messages', schema=None) as batch_op:
        batch_op.add_column(sa.Column('read', sa.BOOLEAN(), nullable=True))
        batch_op.alter_column('created_at',
               existing_type=sa.DATETIME(),
               nullable=True)
        batch_op.alter_column('subject',
               existing_type=sa.VARCHAR(length=200),
               nullable=True)
        batch_op.drop_column('flag_reason')
        batch_op.drop_column('is_hidden')
        batch_op.drop_column('is_flagged')
        batch_op.drop_column('is_read')

    with op.batch_alter_table('bookings', schema=None) as batch_op:
        batch_op.add_column(sa.Column('start_time', sa.DATETIME(), nullable=False))
        batch_op.add_column(sa.Column('end_time', sa.DATETIME(), nullable=False))
        batch_op.drop_column('updated_at')
        batch_op.drop_column('end_date')
        batch_op.drop_column('start_date')

    op.create_table('reviews',
    sa.Column('id', sa.INTEGER(), nullable=False),
    sa.Column('user_id', sa.INTEGER(), nullable=False),
    sa.Column('resource_id', sa.INTEGER(), nullable=False),
    sa.Column('rating', sa.INTEGER(), nullable=False),
    sa.Column('comment', sa.TEXT(), nullable=True),
    sa.Column('created_at', sa.DATETIME(), nullable=True),
    sa.ForeignKeyConstraint(['resource_id'], ['resources.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###
